Add kanban specific api endpoints
