# models/user.go
@@ -1509,3 +1509,43 @@ func (u *User) GetValidNameFromEmail() (string){
 	}
 	return userName
 }
+
+// GetAccessibleRepositoriesIds gets all ids for the public/private repos that user has access to
+func (user *User) GetAccessibleRepositoriesIds() ([]int64, error) {
+	sess := x.NewSession()
+	defer sess.Close()
+	var repos_ids []int64
+
+	if user.IsAdmin {
+		err := sess.Select("id").Table("repository").Find(&repos_ids);
+		if err != nil {
+			return nil, fmt.Errorf("Repo: %v", err)
+		}
+		return repos_ids, nil
+	}
+
+	cond := builder.NewCond()
+	cond = cond.Or(builder.Eq{"owner_id": user.ID}, builder.Eq{"is_private": false})
+	collaborateCond := builder.And(
+		builder.Expr("id IN (SELECT repo_id FROM `access` WHERE access.user_id = ?)", user.ID),
+		builder.Neq{"owner_id": user.ID},
+	)
+
+	iyoOrganizations := user.GetUserOrganizations()
+	if len(iyoOrganizations) > 0 {
+		iyoReposCond := builder.Select("repo_id").
+			From("iyo_collaboration").
+			Where(builder.In("organization_global_id", iyoOrganizations))
+		iyoCond := builder.And(
+			builder.In("id", iyoReposCond),
+			builder.Neq{"owner_id": user.ID})
+		collaborateCond = collaborateCond.Or(iyoCond)
+	}
+	cond = cond.Or(collaborateCond)
+
+	err := sess.Select("id").Table("repository").Where(cond).Find(&repos_ids);
+	if err != nil {
+		return nil, fmt.Errorf("Repo: %v", err)
+	}
+	return repos_ids, nil
+}
