# routers/api/v1/api_extended.go
@@ -28,5 +28,7 @@ func registerExtendedRoutes(m *macaron.Macaron) {
 	m.Post("/orgs", reqToken(), bind(api.CreateOrgOption{}), org.CreateOrganization)
 
 	m.Get("/orgs/search", repo.SearchOrgs)
+	m.Get("/kanban/filters", reqToken(), user.GetFilters)
+	m.Get("/kanban/issues", reqToken(), user.GetKanbanIssues)
 	m.Post("/token-by-jwt", bind(user.TokenByJwtOption{}), user.GetTokenByJWT)
 }
